# whatsmeo-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/whatsmeow/: Cargo.toml  README.md  build.rs
crates/whatsmeow-sys/: Cargo.toml  README.md  build.rs
crates/whatsmeow-sys/go/: .gitignore  go.mod  go.sum
crates/whatsmeow-sys/go/bridge/: client.go  events.go  export.go
crates/whatsmeow-sys/go/scripts/: generate_lib.ps1
crates/whatsmeow-sys/src/: lib.rs
crates/whatsmeow/examples/: basic.rs  multi.rs  stream.rs
crates/whatsmeow/src/: allocator.rs  builder.rs  client.rs  embedded.rs  error.rs  event_bus.rs  events.rs  ffi.rs  handlers.rs  inner.rs  lib.rs  manager.rs  stream.rs
examples/: basic.rs
external-example/: Cargo.toml
external-example/src/: main.rs
go/: .gitignore  build.ps1  go.mod  go.sum
go/bridge/: client.go  events.go  export.go
