[workspace]
resolver = "2"
members = ["crates/whatsmeow-sys", "crates/whatsmeow", "external-example"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sabry-awad97/whatsmeow-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# Futures
futures = "0.3"

# FFI
libc = "0.2"
