[package]
name = "whatsmeow-sys"
version.workspace = true
edition.workspace = true
authors = ["Your Name <email@example.com>"]
description = "Raw FFI bindings to the WhatsApp Go bridge DLL for whatsmeow"
license.workspace = true
repository = "https://github.com/sabry-awad97/whatsmeow-rs"
readme = "README.md"

[build-dependencies]
cc = "1.0"

[dependencies]
libc.workspace = true
