[package]
name = "whatsmeow-sys"
version = "0.1.3"
edition.workspace = true
authors = ["Sabry Awad <dr.sabry1997@gmail.com>"]
description = "Raw FFI bindings to the WhatsApp Go bridge DLL for whatsmeow"
license = "MIT"
repository = "https://github.com/sabry-awad97/whatsmeow-rs"
readme = "README.md"
include = [
    "src/**/*",
    "go/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
