[package]
name = "whatsmeow"
version = "0.1.2"
edition = "2021"
authors = ["Sabry Awad <sabry-awad97@hotmail.com>"]
description = "Idiomatic, thread-safe Rust bindings for WhatsApp via WhatsMeow Go bridge"
keywords = ["whatsapp", "messaging", "ffi", "whatsmeow"]
categories = ["api-bindings", "asynchronous", "multimedia"]
homepage = "https://github.com/sabry-awad97/whatsmeow-rs"
repository = "https://github.com/sabry-awad97/whatsmeow-rs"
readme = "README.md"
license.workspace = true

[dependencies]
whatsmeow-sys = { path = "../whatsmeow-sys", version = "0.1.2" }

tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
futures.workspace = true

[dev-dependencies]
anyhow.workspace = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "multi"
path = "examples/multi.rs"
