[package]
name = "whatsmeow"
version = "0.1.4"
edition.workspace = true
authors = ["Sabry Awad <dr.sabry1997@gmail.com>"]
description = "Idiomatic, thread-safe Rust bindings for WhatsApp via WhatsMeow Go bridge"
keywords = ["whatsapp", "messaging", "ffi", "whatsmeow"]
categories = ["api-bindings", "asynchronous", "multimedia"]
homepage = "https://github.com/sabry-awad97/whatsmeow-rs"
repository = "https://github.com/sabry-awad97/whatsmeow-rs"
readme = "README.md"
license.workspace = true

[features]
default = []
embed-dll = [] # Embed the Go DLL in the binary for portable executables

[dependencies]
whatsmeow-sys = { path = "../whatsmeow-sys", version = "0.1.4" }

tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
futures.workspace = true
base64 = "0.22.1"

[dev-dependencies]
anyhow.workspace = true
qrcode = "0.14.1"
colored = "3.0.0"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "multi"
path = "examples/multi.rs"
